bone calculation from edit mode goes wrong #39766

Closed
opened 2014-04-17 03:27:31 +02:00 by bassam kurdali · 9 comments
Member

System Information
GNU Linux 64 bit (Fedora) Intel i7, nVidia GPU

Blender Version
Broken: f2f3e3f8
Worked:= 2.70a

Short description of error
When going from Edit mode to pose or object mode, bones jump around (even in rest position) to incorrect rotations/locations for some armatures/bones

Exact steps for others to reproduce the error
Load the uploaded blend file in current git{F85045}
Tab/Tab on selected armature
Observe bones jumping
Load it in 2.70a
Observe bones not jumping

It might be related to the following commit:
http://lists.blender.org/pipermail/bf-blender-cvs/2014-April/063377.html

**System Information** GNU Linux 64 bit (Fedora) Intel i7, nVidia GPU **Blender Version** Broken: f2f3e3f8 Worked:= 2.70a **Short description of error** When going from Edit mode to pose or object mode, bones jump around (even in rest position) to incorrect rotations/locations for some armatures/bones **Exact steps for others to reproduce the error** Load the uploaded blend file in current git{[F85045](https://archive.blender.org/developer/F85045/people_orox.blend)} Tab/Tab on selected armature Observe bones jumping Load it in 2.70a Observe bones not jumping It might be related to the following commit: http://lists.blender.org/pipermail/bf-blender-cvs/2014-April/063377.html
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

#39769 was marked as duplicate of this issue

#39769 was marked as duplicate of this issue
Bastien Montagne was assigned by Joshua Leung 2014-04-17 04:59:27 +02:00
Member

Added subscriber: @YonghaiYu

Added subscriber: @YonghaiYu
Member

◀ Merged tasks: #39769.

◀ Merged tasks: #39769.

This issue was referenced by blender/blender-addons-contrib@bd3231c760

This issue was referenced by blender/blender-addons-contrib@bd3231c7604a346bbbb6adeb1d027077392eabe2

This issue was referenced by bd3231c760

This issue was referenced by bd3231c7604a346bbbb6adeb1d027077392eabe2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bd3231c760.

Closed by commit bd3231c760.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39766
No description provided.