Fix T39766: bone calculation from edit mode goes wrong

Own logic error in previous commit...